--- a/src/main/resources/static/news_list.html
+++ b/src/main/resources/static/news_list.html
@@ -222,7 +222,7 @@
 
     <script src="my_js/site.js"></script>
     <script src="my_js/baseModel.js"></script>
-    <script src="my_js/news_model.js"></script>
+    <script src="my_js/news_model.js?v=0.02"></script>
     <script src="my_js/base_list.js"></script>
     <script src="my_js/left_menu_model.js"></script>
 
