--- a/src/main/resources/java_template/ctrl_view.html
+++ b/src/main/resources/java_template/ctrl_view.html
@@ -10,7 +10,9 @@ import #$PackageName#.util.RessponseMessge;
 import org.apache.ibatis.annotations.Param;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.HashMap;
