--- a/src/main/resources/static/news_resource_list_list.html
+++ b/src/main/resources/static/news_resource_list_list.html
@@ -135,7 +135,7 @@
 
                                         <select class="form-control show-tick">
                                             <option value="">--请选择 --</option>
-                                            <option value="newsid">资源Id</option>
+                                            <option value="newsid">文章Id</option>
                                             <option value="newsresourceid">资源Id</option>
 
 
@@ -223,7 +223,13 @@
     <script src="my_js/news_resource_list_model.js"></script>
     <script src="my_js/base_list.js"></script>
     <script src="my_js/left_menu_model.js"></script>
+    <style>
+     #trresource{
 
+        width: 400px;
+     }
+
+    </style> 
 
 </body>
 
