--- a/src/main/resources/static/news_resource_visit_report_list.html
+++ b/src/main/resources/static/news_resource_visit_report_list.html
@@ -238,7 +238,7 @@
     <script src="js/pages/ui/dialogs.js"></script>
     <!-- Validation Plugin Js -->
     <script src="plugins/jquery-validation/jquery.validate.js"></script>
-    <script src="http://gfrjxz.com/manager/plugins/daterangepicker/daterangepicker.js"></script>
+
 
     <!-- Custom Js -->
     <script src="js/admin.js"></script>
@@ -251,8 +251,8 @@
     <script>
         $(document).ready(function(){
             
-          $("#starttime").datepicker({ dateFormat: "yy-mm-dd" });
-          $("#endtime").datepicker({ dateFormat: "yy-mm-dd" });
+          //$("#starttime").datepicker({ dateFormat: "yy-mm-dd" });
+          //$("#endtime").datepicker({ dateFormat: "yy-mm-dd" });
 
         });
     </script>
