--- a/src/main/resources/static/news_resource_list_edit.html
+++ b/src/main/resources/static/news_resource_list_edit.html
@@ -149,7 +149,7 @@
                                   <div class="col-lg-4">
                                     <div class="form-group">
                                         <div class="form-line">
-                                            <input type="text"  data-rule="required,true" name="title" id="ctitle" class="form-control" placeholder="请选择资源">
+                                            <input type="text"  data-rule="required,true" name="ctitle" id="ctitle" class="form-control" placeholder="请选择资源">
                                             <input type="hidden"  data-rule="required,true" name="newsresourceid" id="newsresourceid" class="form-control" placeholder="请输入资源Id">
                                         </div>
                                     </div>
