--- a/src/main/resources/static/news_resource_edit.html
+++ b/src/main/resources/static/news_resource_edit.html
@@ -119,7 +119,7 @@
 
                         </div>
                         <div class="body">
-                            < class="form-horizontal" method="post" id="frmNewsResource">
+                            <form class="form-horizontal" method="post" id="frmNewsResource">
                                                           
                                  
                                 <div class="row clearfix">
