finish list search

--- a/src/main/resources/static/a/detail.html
+++ b/src/main/resources/static/a/detail.html
@@ -123,24 +123,24 @@
              <a class="logo" href=/index.php"></a>
              <div class="main-nav pull-left hidden-xs">
                  <ul class="header-menu">
-                     <li>
-                         <a href="/" class="has-url">首页</a>
-                     </li>
-                     <li>
-                         <a href="/index.php/article/listall/001" class="has-url">娱乐</a>
-                     </li>
-                     <!-- 24-02-27
-                     <li>
-                         <a href="/index.php/film/listall" class="has-url">电影库</a>
-                     </li>
-                     -->
-                     
-                     <li>
-                         <a href="/index.php/article/listall/008" class="has-url">好物</a>
-                     </li>
-                     <li>
-                         <a href="/index.php/article/show/224.html" class="has-url">关于</a>
-                     </li>
+                    <li>
+                        <a href="/a/index.html" class="has-url">首页</a>
+                    </li>
+                    <li>
+                        <a href="/a/list.html?cid=001" class="has-url">娱乐</a>
+                    </li>
+                    <!-- 24-02-27
+                    <li>
+                        <a href="/index.php/film/listall" class="has-url">电影库</a>
+                    </li>
+                    -->
+                    
+                    <li>
+                        <a href="/a/list.html?cid=008" class="has-url">好物</a>
+                    </li>
+                    <li>
+                        <a href="/a/detail.html?id=224" class="has-url">关于</a>
+                    </li>
                  </ul>
  
              </div>
