--- a/src/main/resources/static/a/index.html
+++ b/src/main/resources/static/a/index.html
@@ -41,22 +41,16 @@
             <div class="main-nav pull-left hidden-xs">
                 <ul class="header-menu">
                     <li>
-                        <a href="/" class="has-url">首页</a>
+                        <a href="/a/index.html" class="has-url">首页</a>
                     </li>
                     <li>
-                        <a href="/index.php/article/listall/001" class="has-url">娱乐</a>
-                    </li>
-                    <!-- 24-02-27
+                        <a href="/a/list.html?cid=001" class="has-url">娱乐</a>
+                    </li>                  
                     <li>
-                        <a href="/index.php/film/listall" class="has-url">电影库</a>
-                    </li>
-                    -->
-                    
-                    <li>
-                        <a href="/index.php/article/listall/008" class="has-url">好物</a>
+                        <a href="/a/list.html?cid=008" class="has-url">好物</a>
                     </li>
                     <li>
-                        <a href="/index.php/article/show/224.html" class="has-url">关于</a>
+                        <a href="/a/detail.html?id=224" class="has-url">关于</a>
                     </li>
                 </ul>
 
@@ -77,16 +71,16 @@
         <nav class="mini-nav visible-xs">
             <ul class="menu-mini-nav">
                 <li class="menu-item menu-item-type-custom menu-item-object-custom">
-                    <a href="/index.php">首页</a>
+                    <a href="/a/index.html">首页</a>
                 </li>
                 <li class="menu-item menu-item-type-custom menu-item-object-custom">
-                    <a href="/index.php/article/listall/002">娱乐</a>
+                    <a href="/a/list.html?cid=001">娱乐</a>
                 </li>
                 <li class="menu-item menu-item-type-custom menu-item-object-custom">
-                    <a href="/index.php/article/listall/003">趣闻</a>
+                    <a href="/a/list.html?cid=003">趣闻</a>
                 </li>
                 <li class="menu-item menu-item-type-custom menu-item-object-custom">
-                    <a href="/index.php/article/listall/004">趣闻</a>
+                    <a href="/a/list.html?cid=001">趣闻</a>
                 </li>
             </ul>
 
