--- a/src/main/resources/static/a/list.html
+++ b/src/main/resources/static/a/list.html
@@ -44,10 +44,10 @@
             <div class="main-nav pull-left hidden-xs">
                 <ul class="header-menu">
                     <li>
-                        <a href="/" class="has-url">首页</a>
+                        <a href="/a/index.html" class="has-url">首页</a>
                     </li>
                     <li>
-                        <a href="/index.php/article/listall/001" class="has-url">娱乐</a>
+                        <a href="/a/list.html?cid=001" class="has-url">娱乐</a>
                     </li>
                     <!-- 24-02-27
                     <li>
@@ -56,19 +56,18 @@
                     -->
                     
                     <li>
-                        <a href="/index.php/article/listall/008" class="has-url">好物</a>
+                        <a href="/a/list.html?cid=008" class="has-url">好物</a>
                     </li>
                     <li>
-                        <a href="/index.php/article/show/224.html" class="has-url">关于</a>
+                        <a href="/a/detail.html?id=224" class="has-url">关于</a>
                     </li>
                 </ul>
 
             </div>
             <div class="search-box pull-right search-selected">
-                <form action="/index.php/news_tag/listall/1/" name="search" method="get">
-                    <input type="hidden" name="m" value="search">
-
-                    <input type="text" class="search-t" name="q" id="q" placeholder="搜索">
+                <form action="/a/list.html" name="search" method="get">
+                   
+                    <input type="text" class="search-t" name="ctitle" id="ctitle" placeholder="搜索">
                     <input type="button" class="search-btn FontAwesome" value="" onclick="check();">
                 </form>
             </div>
