--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -146,7 +146,7 @@
   <!-- Custom Js -->
   <script src="js/admin.js"></script>
 
-  <script src="my_js/site.js"></script>
+  <script src="my_js/site.js?v=0.01"></script>
  
 
   <script src="my_js/baseModel.js?v=0.01"></script>
