--- a/src/main/resources/static/a/index.html
+++ b/src/main/resources/static/a/index.html
@@ -56,10 +56,9 @@
 
             </div>
             <div class="search-box pull-right search-selected">
-                <form action="/index.php/news_tag/listall/1/" name="search" method="get">
-                    <input type="hidden" name="m" value="search">
-
-                    <input type="text" class="search-t" name="q" id="q" placeholder="搜索">
+                <form action="/a/list.html" name="search" method="get">
+                   
+                    <input type="text" class="search-t" name="ctitle" id="ctitle" placeholder="搜索">
                     <input type="button" class="search-btn FontAwesome" value="" onclick="check();">
                 </form>
             </div>
