--- a/src/main/resources/static/a/list.html
+++ b/src/main/resources/static/a/list.html
@@ -104,7 +104,7 @@
                         <div class="article-nav-box clearfix">
                             <ul class="article-nav-list clearfix"> 
                                 <li>
-                                    <a class="active" href="#"id=""  cid="">黑木瞳</a>
+                                    <a class="active alinkTop" href="#" id=""  cid=""></a>
                                 </li>
                             </ul>
                         </div>
